Fix hide scroll bar on Firefox screen

--- a/src/components/DirectoryTable/index.less
+++ b/src/components/DirectoryTable/index.less
@@ -4,6 +4,8 @@
 
 .directoryTable {
   padding: 24px 24px 0 24px;
+  scrollbar-color: #e0e4e9 transparent !important;
+
   .employeeId {
     padding-left: 16px !important;
   }
@@ -150,7 +152,7 @@
     width: 7px;
     height: 7px;
     border-radius: 5px;
-    background-color: #f4f4f4;
+    background-color: transparent;
     border: none;
   }
 
